# ros2_control_demos

example_3/bringup/config/: rrbot_multi_interface_forward_controllers.yaml
example_3/description/ros2_control/: rrbot_system_multi_interface.ros2_control.xacro
example_3/hardware/: rrbot_system_multi_interface.cpp
example_3/hardware/include/ros2_control_demo_example_3/: rrbot_system_multi_interface.hpp
joint_mode_controller/: CMakeLists.txt  joint_mode_plugin.xml  package.xml
joint_mode_controller/include/joint_mode_controller/: joint_mode_controller.hpp  visibility_control.h
joint_mode_controller/src/: joint_mode_controller.cpp  joint_mode_controller_parameters.yaml
